src/test/ui/lifetimes/lifetime-errors/issue_74400.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/issue_74400.rs:12:5
   |
LL |     f(data, identity)
   |     ^ implementation of `FnOnce` is not general enough
   |
   = note: `fn(&'2 T) -> &'2 T {identity::<&'2 T>}` must implement `FnOnce<(&'1 T,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 T,)>`, for some specific lifetime `'2`

error: aborting due to previous error

